fix(@clayui/css): LPD-39960 make autofit-col spacing smaller in thead

--- a/packages/clay-css/src/scss/cadmin/variables/_tables.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_tables.scss
@@ -281,6 +281,16 @@ $cadmin-c-table: map-deep-merge(
 					th: (
 						href: $cadmin-table-head-link,
 					),
+					autofit-col: (
+						padding-left: 0.125rem,
+						padding-right: 0.125rem,
+						first-child: (
+							padding-left: 0,
+						),
+						last-child: (
+							padding-right: 0,
+						),
+					),
 				)
 			),
 		table-column-start: (
@@ -365,8 +375,8 @@ $cadmin-c-table: map-deep-merge(
 		),
 		autofit-col: (
 			justify-content: center,
-			padding-left: calc(nth($cadmin-table-cell-padding, 2) / 2),
-			padding-right: calc(nth($cadmin-table-cell-padding, 2) / 2),
+			padding-left: nth($cadmin-table-cell-padding, 2),
+			padding-right: nth($cadmin-table-cell-padding, 2),
 			first-child: (
 				padding-left: 0,
 			),
