--- a/packages/clay-css/src/scss/variables/_tables.scss
+++ b/packages/clay-css/src/scss/variables/_tables.scss
@@ -246,6 +246,16 @@ $c-table: map-deep-merge(
 					th: (
 						href: $table-head-link,
 					),
+					autofit-col: (
+						padding-left: 0.125rem,
+						padding-right: 0.125rem,
+						first-child: (
+							padding-left: 0,
+						),
+						last-child: (
+							padding-right: 0,
+						),
+					),
 				)
 			),
 		table-column-start: (
@@ -324,8 +334,8 @@ $c-table: map-deep-merge(
 		),
 		autofit-col: (
 			justify-content: center,
-			padding-left: calc(nth($table-cell-padding, 2) / 2),
-			padding-right: calc(nth($table-cell-padding, 2) / 2),
+			padding-left: nth($table-cell-padding, 2),
+			padding-right: nth($table-cell-padding, 2),
 			first-child: (
 				padding-left: 0,
 			),
